modification du grid

--- a/template.html
+++ b/template.html
@@ -15,8 +15,8 @@
         <!-- SECTION SYSTEME -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-poste-de-travail-50.png" class="logo" alt="">
-                <span>Système</span>
+                <img src="/AAA/Images/icons8-poste-de-travail-50.png" class="logo" alt="">
+                <span>System</span>
             </summary>
             <div class="content">
                 -<br>-<br>-<br>-
@@ -26,7 +26,7 @@
         <!-- SECTION CPU -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-cpu-50.png" class="logo" alt="">
+                <img src="/AAA/Images/icons8-cpu-50.png" class="logo" alt="">
                 <span>CPU</span>
             </summary>
             <div class="content">
@@ -37,7 +37,7 @@
         <!-- SECTION MEMOIRE -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-ssd-50.png" class="logo" alt="">
+                <img src="/AAA/Images/icons8-ssd-50.png" class="logo" alt="">
                 <span>Mémoire</span>
             </summary>
             <div class="content">
@@ -48,7 +48,7 @@
         <!-- SECTION RESEAU -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-routeur-wi-fi-50.png" class="logo" alt="">
+                <img src="/AAA/Images/icons8-routeur-wi-fi-50.png" class="logo" alt="">
                 <span>Réseau</span>
             </summary>
             <div class="content">
@@ -59,7 +59,7 @@
         <!-- SECTION PROCESSUS -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-application-50.png" class="logo" alt="">
+                <img src="/AAA/Images/icons8-application-50.png" class="logo" alt="">
                 <span>Processus</span>
             </summary>
             <div class="content">
@@ -70,7 +70,7 @@
         <!-- SECTION FICHIERS -->
         <details class="card">
             <summary>
-                <img src="/Images/icons8-documents-50.png" class="logo" alt="">
+                <img src="/AAA/Images/icons8-documents-50.png" class="logo" alt="">
                 <span>Fichiers</span>
             </summary>
             <div class="content">
