ajout d'un footer

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
    </head>
    <body>
     <header class="header">
-      <h1>Dashboard PC</h1>
+      <h1>Monitoring VM Linux</h1>
     </header>
     <main>
     <section class="dashboard">
@@ -81,7 +81,8 @@
       </section>
 </main>
     <footer>
-       <p>© 2025 Dashboard PC</p>
+        <img src="/AAA/Images/illu_logo_blog-56-1024x562.png"width=150px>
+        <p>Virtual Machine Linux</p>
     </footer>
    </body>
 </html>
